<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Formulario">

    <!--Layout para el nombre de usario-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="30sp"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eNombre"
            android:hint="@string/exnombre"
            android:textSize="20sp"
            />

    </LinearLayout>

    <!--Layout para el correo-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="30sp"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eCorreo"
            android:hint="@string/excorreo"
            android:textSize="20dp"
            android:inputType="textWebEmailAddress"
            />

    </LinearLayout>

    <!--Layout para el Telefono-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:textSize="30sp"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eTel"
            android:hint="@string/extel"
            android:textSize="20sp"
            android:inputType="phone"
            />

    </LinearLayout>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gener"
        android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fem"
                android:id="@+id/radioFem"
                android:checked="true"
                android:onClick="onRadioButtonClicked"/>

            <LinearLayout
                android:layout_width="10sp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masc"
                android:id="@+id/radioMasc"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="30sp"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eCity"
            android:entries="@array/cities_array"
            android:layout_weight="1" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hob"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hob1"
            android:id="@+id/eFutbol"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hob2"
            android:id="@+id/eBalonc"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hob3"
            android:id="@+id/eKarat"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hob4"
            android:id="@+id/eCorrer"
            android:onClick="onCheckboxClicked"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechaNac"
        android:textSize="30sp"/>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="150sp"
        android:id="@+id/eFecha"
        android:calendarViewShown="false"
        android:startYear="1940"
        android:endYear="2014"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton"
        android:id="@+id/button"
        android:layout_gravity="center"
        android:onClick="CargarDatos"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:id="@+id/tNombre"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:id="@+id/tCorreo"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:id="@+id/tTel"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gener"
            android:id="@+id/tGenero"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:id="@+id/tCity"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hob"
            android:id="@+id/tHobby"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tHobby2"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tHobby3"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tHobby4"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaNac"
            android:id="@+id/tDia"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tMes"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tYear"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>
